syntax = "proto3";

package master;

option go_package = "api-master";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "wallet/wallet.proto";
import "analyzer/analyzer.proto";

message CreateTransactionRequest {
  string user_id = 1;
  common.TransactionType type = 2;
  common.Money amount = 3;
  string category_id = 4;
  string from_account_id = 5;
  string to_account_id = 6;
  google.protobuf.Timestamp date = 7;
  string description = 8;
}

message CreateTransactionResponse {
  wallet.Transaction transaction = 1;
}

message GetBalanceRequest {
  string user_id = 1;
}

message GetBalanceResponse {
  common.Money total_balance = 1;
  repeated wallet.Account accounts = 2;
}

message GetAnalyticsRequest {
  string user_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message GetAnalyticsResponse {
  analyzer.GetStatisticsResponse statistics = 1;
}

message GetForecastRequest {
  string user_id = 1;
  common.TimePeriod period = 2;
  int32 periods_ahead = 3;
}

message GetForecastResponse {
  repeated analyzer.Forecast forecasts = 1;
}

service MasterService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {
    option (google.api.http) = {
      post: "/v1/transactions"
      body: "*"
    };
  };

  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/balance"
    };
  };

  rpc GetAnalytics(GetAnalyticsRequest) returns (GetAnalyticsResponse) {
    option (google.api.http) = {
      post: "/v1/analytics"
      body: "*"
    };
  };

  rpc GetForecast(GetForecastRequest) returns (GetForecastResponse) {
    option (google.api.http) = {
      post: "/v1/forecast"
      body: "*"
    };
  };
}
